volexc/tests/ui/mapkey_float_f32.rust.out
Error: invalid map key type: floats cannot be used as map keys
   ╭─[mapkey_float_f32.vol:6:12]
   │
 6 │     data: {f32:string}
   │            ─┬─  
   │             ╰─── floating-point type used here
───╯