volexc/tests/ui/mapkey_float_f32.vol
// rust:fail
// go:fail
// typescript:fail
// f32 is invalid as map key in all languages (not Eq+Hash in Rust)
struct Test {
    data: {f32:string};
}
